src/snapshots/afrotd__parser__tests__interpretation_3.2.3_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 3
index: 6
text: "Team A erzielt während eines Downs, in dem die Spielzeit ausläuft, einen Touchdown. Während Team A’s erfolgreichen Try foult Team\nB."
ruling: "Die Periode wird nicht für einen Kickoff verlängert. Team\nA kann die Strafe annehmen und den Try wiederholen oder die Strafe\nablehnen und die Punkte akzeptieren. Strafen für persönliche Fouls und\nUnsportliche Verhalten Fouls können bei einem anschließenden Kickoff\noder vom Succeeding Spot in Extraperioden geahndet werden."
