src/snapshots/afrotd__parser__tests__interpretation_3.2.3_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 3
index: 7
text: "Team A erzielt während eines Downs, in dem die Spielzeit ausläuft, einen Touchdown. Nachdem der Try endet, verursacht eines der\nTeams ein Dead Ball Foul."
ruling: "Der Try kann aufgrund eines Live\nBall Fouls während des Try wiederholt werden. Die Strafe für das Dead\nBall Foul muss dann ebenfalls bei der Wiederholung des Try geahndet\nwerden. Die Periode wird nicht verlängert, um die Strafe für das Dead\nBall Foul zu ahnden. Wird die Strafe angenommen, muss sie beim Kickoff, mit dem die nächste Periode beginnt, oder vom Succeeding Spot in\nExtraperioden durchgeführt werden."
