src/snapshots/afrotd__parser__tests__interpretation_3.2.4_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 4
index: 4
text: "Team A erzielt einen Touchdown und die 40-Sekunden Play\nClock wird gestartet. Der Ball befindet sich an der B-3 im Mittelpunkt\nzwischen den Hash Marks. Bei 24 Sekunden auf der Play Clock verlangen Team A’s Head Coach oder ein Team-Captain, dass der Ball auf\ndie linke Hash Mark gelegt werden soll."
ruling: "Die Schiedsrichter\nignorieren das Verlangen. Team A kann ein Timeout nehmen, um den\nBall anders positionieren zu lassen."
