src/snapshots/afrotd__parser__tests__interpretation_3.2.4_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 4
index: 5
text: "1. und 10 von der A-25. Zu einem frühen Zeitpunkt in der vierten Spielperiode. Back A21 erhält den Handoff, advanct und wird nach\neinem Raumgewinn von 15 Metern inbounds zu Boden gebracht. Während des Down begeht A88 ein Halten an der A-30 und (a) B54 verliert\nseinen Helm (nicht als Ergebnis eines Fouls) oder (b) B54 wird verletzt."
ruling: "Das Halten-Foul durch A88 wird mit 10 Metern vom Punkt\ndes Fouls geahndet und Team A hat einen 1. und 15 von der A-20. In\nbeiden Fällen (a) und (b), wird die Play Clock auf 40 Sekunden gesetzt\nund sowohl die Play Clock als auch die Game Clock starten mit der\nBallfreigabe durch den Referee."
